* Changelog
** [Unreleased]
*** Added
- Create repository
** [0.0.5] - 2020-03-15
*** Added
- Add protobuff test directorypop3.proto to src
- Add protobuff build to meson
***  Changed
- Update meson.build file
- Add a few sections to README.md
** [0.0.4] - 2020-03-08
*** Added
- Add basic socket to pop3client Class
- Add basic resolver to pop3client Class
- Add read and write methods to pop3client Class
- Add GnuTLS support to pop3client Class (Setup, read/write methods)
- Add utils files for support classes
- Add write_to_file method to utils class, to enable mails to be written as .eml files
- Add documentation TeX structure & references File
- Include spdlog Library
- Add basic spdlog file sink
- Add basic error handling to establish_connection function
- Add split functions to utils.cpp
- Add delete_message function to pop3client class
- Add get_total_messages function to pop3client class
- Add retrieve_messages function to pop3client class
- Add login function to pop3client class
- Include tablulate Library in util.h
- Add quit funtion to pop3client class (gracefully ends sessions)
- Add ends_with funtion to utils 
- Add read_to_end function to pop3client class (reads messages larger than 8000 chars) 
*** Changed
- Split temp function into establish_connection & debug functions
- Fixed output in pop3client_utils::print_messages
- Cleaned up save_mail funtion (now saves complete emails as .eml files with the emails subject as file name)
- Include CLI11 Library in main.cpp
- Add simple CLA handling
- Include JSON Library in main.cpp
- Add simple json parsing to read config file
- Add simple commands to CLA list
- Add simple handling for CLA commands
- Add Interactive.h & Interactive.cpp
- Add Interactive class to handle responsive input of commands
- Add CLA to enable Interactive shell
*** Removed
- Remove subprocess attempt
- Remove backup folder, as it no longer holds any importance
*** Changed
- Update Naming Scheme